[project]
name = "battle-menu"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Winikka",email = "3827026+HundredVisionsGuy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "battle_menu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
